Fixed scrolling issue on  devices while using css parallax

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -230,6 +230,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "4d9e8570": {
+          "id": "4d9e8570",
+          "path": "images/intro-background-956.jpg",
+          "output": "images/intro-background-956.jpg",
+          "name": "intro-background-956.jpg",
+          "category": "IMAGE",
+          "size": 186323,
+          "type": "jpg",
+          "initialSize": 186323,
+          "optimized": false,
+          "height": 956,
+          "width": 1440
         }
       },
       "deploymentHistory": {},
