Changed header to nav

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -174,27 +174,6 @@
           ],
           "type": "sass"
         },
-        "07f8acfa": {
-          "id": "07f8acfa",
-          "path": "css/_header.sass",
-          "output": "css/_header.css",
-          "name": "_header.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d1a5d849"
-          ],
-          "type": "sass"
-        },
         "382cb2ea": {
           "id": "382cb2ea",
           "path": "css/_footer.sass",
@@ -291,6 +270,27 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "4856e72b": {
+          "id": "4856e72b",
+          "path": "css/_nav.sass",
+          "output": "css/_nav.css",
+          "name": "_nav.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d1a5d849"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
