Updated prepros config

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -174,27 +174,6 @@
           ],
           "type": "sass"
         },
-        "07f8acfa": {
-          "id": "07f8acfa",
-          "path": "css/_header.sass",
-          "output": "css/_header.css",
-          "name": "_header.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d1a5d849"
-          ],
-          "type": "sass"
-        },
         "382cb2ea": {
           "id": "382cb2ea",
           "path": "css/_footer.sass",
@@ -243,6 +222,25 @@
           "optimized": false,
           "height": 956,
           "width": 1440
+        },
+        "07f8acfa": {
+          "id": "07f8acfa",
+          "path": "css/_header.sass",
+          "output": "css/_header.css",
+          "name": "_header.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
