Added nav scrolling
# Conflicts:
#	prepros.cfg

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -291,6 +291,21 @@
             "d1a5d849"
           ],
           "type": "sass"
+        },
+        "92cf2253": {
+          "id": "92cf2253",
+          "path": "js/jquery-ui-1.11.4.min.js",
+          "output": "js/jquery-ui-1.11.4.min.min.js",
+          "name": "jquery-ui-1.11.4.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
